# Scrapper-Agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  FEATURES.md  IDEA.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  README.md  WORKFLOW.md  pre-commit-guard.sh  pre-migration-guard.sh  pyproject.toml  run.sh  validate.sh
.claude/: settings.json
backend/: config.py  resume.py  schemas.py
backend/api/: application_view.py  deps.py  dto.py  dto_applications.py  export.py  (+10 more)
docs/: ARCHITECTURE.md  DESIGN.md  IDEA.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  WORKFLOW.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.app.json
migrations/: env.py
tests/: conftest.py  test_api.py  test_api_applications.py  test_api_companies.py  test_api_profile.py  test_api_resume.py  test_api_sources.py  test_api_whatsapp.py  test_autoapply_answers.py  test_autoapply_events.py  test_autoapply_executor.py  test_autoapply_field_cache.py  test_autoapply_filler.py  test_autoapply_matching.py  test_autoapply_planner.py  test_autoapply_profile.py  test_autoapply_providers.py  test_autoapply_safety.py  test_backup.py  test_client.py  test_companies.py  test_config.py  test_discovery.py  test_export.py  test_extractor.py  test_fetcher.py  test_health.py  test_models.py  test_pipeline.py  test_prompts.py  test_repo.py  test_resolve.py  test_resume.py  test_scheduler.py  test_schemas.py  test_search.py  test_sources.py  test_stream.py  test_tasks.py  test_transport.py  (+2 more)
(+135 files in other folders)
