[project]
name = "scraper-agent"
version = "0.1.0"
description = "AI agent that scrapes job postings and interview questions into structured data"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "sqlalchemy==2.0.44",
    "pydantic==2.12.4",
    "scrapling==0.3.10",
    "ollama==0.6.1",
    "anthropic==0.75.0",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "mypy==1.19.0",
    "ruff==0.14.5",
    "httpx==0.28.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
